fixed cafe image alignment on a large screen

--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@ hr {
 }
 
 .right {
-  display: flex;
+  /* display: flex; */
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
@@ -138,6 +138,8 @@ img.cafe {
 .cafe {
   height: 200px;
   width: 520px;
+  margin: auto;
+  position: relative;
 }
 .window {
   margin: auto;
@@ -266,7 +268,7 @@ img.cafe {
 
 @media (min-width: 1100px) {
   .right {
-    width: 650px;
+    width: 450px;
   }
   .window {
     width: 650px;
@@ -304,7 +306,7 @@ img.cafe {
     flex: 1 0;
   }
   .right {
-    width: 450px;
+    width: 700px;
   }
 }
 
